[gd_scene load_steps=8 format=3 uid="uid://o6751jpxwjgd"]

[ext_resource type="Script" path="res://options.gd" id="1_4pf60"]
[ext_resource type="FontFile" uid="uid://mapb028hnase" path="res://Modak-Regular.ttf" id="2_owtmx"]
[ext_resource type="FontFile" uid="uid://bhxd8g0irveup" path="res://SlacksideOne-Regular.ttf" id="3_ef2i3"]
[ext_resource type="AudioStream" uid="uid://dnb6vsdh6n6eb" path="res://Menu.mp3" id="4_xwdcd"]
[ext_resource type="AudioStream" uid="uid://cupip4ddwhj0j" path="res://1212_1_.ogg" id="5_5iqwa"]
[ext_resource type="Script" path="res://ColorRect3.gd" id="6_agkut"]
[ext_resource type="Script" path="res://ColorRect4.gd" id="7_hkjy0"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pf60")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -894.0
offset_top = -517.0
offset_right = 3084.0
offset_bottom = 1862.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1447.0
offset_right = 1632.0
offset_bottom = 329.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.254902)

[node name="Label" type="Label" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -464.0
offset_right = 507.0
offset_bottom = 390.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 13
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("2_owtmx")
theme_override_font_sizes/font_size = 256
text = "Options"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.5
offset_top = 23.0
offset_right = 354.5
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.207843, 0.207843, 0.207843, 1)
theme_override_colors/font_focus_color = Color(0.337255, 0.337255, 0.337255, 1)
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Audio"
flat = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -284.0
offset_right = 300.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.298039, 0.298039, 0.298039, 1)
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Exit
"
flat = true

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -167.0
offset_right = 244.5
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.231373, 0.231373, 0.231373, 1)
theme_override_colors/font_hover_pressed_color = Color(0.215686, 0.215686, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Language"
flat = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xwdcd")
volume_db = -6.559
autoplay = true
bus = &"music"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5iqwa")
bus = &"sfx"

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -536.0
offset_right = 2479.0
offset_bottom = 1360.0
color = Color(0, 0, 0, 0.729412)
script = ExtResource("6_agkut")

[node name="Button" type="Button" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -341.0
offset_right = 202.5
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "English"
flat = true

[node name="Button2" type="Button" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -109.0
offset_right = 237.5
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Espa√±ol"
flat = true

[node name="Button3" type="Button" parent="ColorRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = 109.0
offset_right = 237.5
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Exit"
flat = true

[node name="ColorRect4" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -2090.0
offset_top = -526.0
offset_right = 3304.0
offset_bottom = 2484.0
color = Color(0, 0, 0, 0.729412)
script = ExtResource("7_hkjy0")

[node name="Button3" type="Button" parent="ColorRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 127.0
offset_top = -190.0
offset_right = 602.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.266667, 0.266667, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Exit"
flat = true

[node name="Label" type="Label" parent="ColorRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 197.0
offset_top = -404.0
offset_right = 508.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 13
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "Music"

[node name="Label2" type="Label" parent="ColorRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 252.0
offset_top = -634.0
offset_right = 563.0
offset_bottom = -445.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 13
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("3_ef2i3")
theme_override_font_sizes/font_size = 128
text = "SFX"

[node name="HSlider" type="HSlider" parent="ColorRect4"]
texture_filter = 2
layout_mode = 0
offset_left = 3273.0
offset_top = 966.0
offset_right = 3439.0
offset_bottom = 982.0
scale = Vector2(4, 4)
theme_override_constants/center_grabber = 6
min_value = -100.0
max_value = 1.0
rounded = true

[node name="HSlider2" type="HSlider" parent="ColorRect4"]
texture_filter = 2
layout_mode = 0
offset_left = 3273.0
offset_top = 1201.0
offset_right = 3439.0
offset_bottom = 1217.0
scale = Vector2(4, 4)
theme_override_constants/center_grabber = 6
min_value = -100.0
max_value = 1.0
rounded = true

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="finished" from="AudioStreamPlayer3" to="." method="_on_audio_stream_player_3_finished"]
[connection signal="mouse_entered" from="ColorRect3/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ColorRect3/Button" to="ColorRect3" method="_on_button_pressed"]
[connection signal="mouse_entered" from="ColorRect3/Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="ColorRect3/Button2" to="ColorRect3" method="_on_button_2_pressed"]
[connection signal="mouse_entered" from="ColorRect3/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="ColorRect3/Button3" to="ColorRect3" method="_on_button_3_pressed"]
[connection signal="mouse_entered" from="ColorRect4/Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="pressed" from="ColorRect4/Button3" to="ColorRect4" method="_on_button_3_pressed"]
[connection signal="changed" from="ColorRect4/HSlider" to="ColorRect4" method="_on_h_slider_changed"]
[connection signal="value_changed" from="ColorRect4/HSlider" to="ColorRect4" method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="ColorRect4/HSlider2" to="ColorRect4" method="_on_h_slider_2_value_changed"]
